ORDERS PopUp fix & AutoComplete Address added in admin pannel
The Layout of orders popup in Restaurant owners panel and store owner panel has been fixed. Autocomplete Address has been added to to address bar while adding a new store or a restaurant

--- a/owners/assets/css/style.css
+++ b/owners/assets/css/style.css
@@ -3435,3 +3435,7 @@ input:checked + .slider:before {
 .error {
   color: #FA001A;
 }
+#tbl_items tbody tr th, #tbl_items tbody tr td{
+	border-top: 1px solid #ddd;
+	padding:8px;
+}
